gcc/testsuite/rust.test/compilable/block_expr3.rs
fn main() {
    let x = 111;

    let a = {
        if x == 10 {
            123
        } else if x < 10 {
            456
        } else {
            789
        }
    };
}
