gcc/testsuite/rust.test/fail_compilation/continue1.rs
fn main() {
    let mut a = 1;
    let mut b = 1;

    let _fib = {
        continue;
        123
    };
}
